--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -1,7 +1,8 @@
 {% extends 'core/base.html' %} {% load static %} {% block head %}
 <script defer src="{% static 'core/js/enroll.js' %}"></script>
+<link rel="stylesheet" href="{% static 'core/dist/css/enroll.css' %}" />
 {% endblock %} {% block content %}
-<main class="m-8 mb-20 framed">
+<main class="m-8 mb-20 p-7 framed">
   <form
     action="{% url 'enroll' %}"
     method="POST"
@@ -9,41 +10,70 @@
     @submit="submit"
     x-data="fields"
   >
-    <nav class="flex gap-10">
-      <h1 class="text-3xl font-sans font-bold mb-3">Matrícula</h1>
-      <ul class="flex gap-6">
-        <li>Identidade</li>
-        <li>Contato</li>
+    <nav class="flex gap-10 items-center">
+      <h1 class="text-3xl font-sans font-bold mb-2">Matrícula</h1>
+      <ul class="flex gap-6 items-center">
+        <li><button @click.prevent="tab = 'identidade'">Identidade</button></li>
+        <li><button @click.prevent="tab = 'contato'">Contato</button></li>
       </ul>
     </nav>
     {% csrf_token %}
-    <section class="grid grid-cols-2 gap-4">
-      <div class="p-8 border border-slate-300 dark:border-slate-600">
-        <h2 class="text-2xl font-sans font-semibold">Informações pessoais</h2>
-        <div class="field">
-          <label for="txt-username">Nome</label>
-          <input
-            type="text"
-            name="username"
-            id="txt-username"
-            maxlength="150"
-            minlength="5"
-            size="30"
-            @keydown="validateName"
-            required
-          />
-          <label for="dt-birthdate">Nascimento</label>
-          <input
-            type="date"
-            name="birthdate"
-            id="dt-birthdate"
-            value="{{ birthdate|date:'Y-m-d' }}"
-            :max="new Date().toISOString().split('T')[0]"
-            required
-          />
+    <section class="grid grid-cols-2 gap-4" x-show="tab === 'identidade'">
+      <article>
+        <h2 class="text-2xl font-sans font-bold mb-2">Informações pessoais</h2>
+        <div class="flex gap-3">
+          <div class="field grow">
+            <label for="txt-username">Nome</label>
+            <input
+              type="text"
+              name="username"
+              id="txt-username"
+              maxlength="150"
+              minlength="5"
+              class="w-full"
+              @keydown="validateName"
+              required
+            />
+          </div>
+          <div class="field">
+            <label for="dt-birthdate">Nascimento</label>
+            <input
+              type="date"
+              name="birthdate"
+              id="dt-birthdate"
+              value="{{ birthdate|date:'Y-m-d' }}"
+              :max="new Date().toISOString().split('T')[0]"
+              required
+            />
+          </div>
+        </div>
+        <div class="flex gap-3">
+          <div class="field flex-1">
+            <label for="txt-cpf">CPF</label>
+            <input
+              type="text"
+              name="cpf"
+              id="txt-cpf"
+              class="w-full"
+              required
+              x-model="cpf"
+              x-mask="999.999.999-99"
+            />
+          </div>
+          <div class="field flex-1">
+            <label for="txt-rg">RG:</label>
+            <input
+              type="text"
+              name="rg"
+              id="txt-rg"
+              class="w-full"
+              required
+              x-model="rg"
+            />
+          </div>
         </div>
         <div class="field">
-          <label for="gender-box">Gênero</label>
+          <label for="gender-box">Gênero:</label>
           <span id="gender-box" class="flex items-center">
             <input
               type="radio"
@@ -60,47 +90,28 @@
             <label for="rd-nb">Não binário</label>
           </span>
         </div>
-        <div class="field">
-          <label for="txt-cpf">CPF</label>
-          <input
-            type="text"
-            name="cpf"
-            id="txt-cpf"
-            required
-            x-model="cpf"
-            x-mask="999.999.999-99"
-            size="12"
-          />
-          <label for="txt-rg">RG:</label>
-          <input
-            type="text"
-            name="rg"
-            id="txt-rg"
-            required
-            x-model="rg"
-            size="11"
-          />
-        </div>
-        <div class="field" x-data="{ check: false }">
+        <div class="flex items-center gap-1" x-data="{ check: false }">
           <label for="cb-afro">Afrodescendente:</label>
-          <input type="checkbox" name="afro" id="cb-afro" x-model="check" />
-          <span class="ml-1" x-text="check ? 'Sim' : 'Não'"></span>
+          <input
+            type="checkbox"
+            name="afro"
+            id="cb-afro"
+            x-model="check"
+            aria-describedby="ch-afro-desc"
+          />
+          <span
+            id="ch-afro-desc"
+            class="ml-1"
+            x-text="check ? '(Sim)' : '(Não)'"
+          ></span>
         </div>
+      </article>
+
+      <article>
+        <h2 class="text-2xl font-sans font-bold mb-2">Cidadania</h2>
         <div class="field">
-          <label for="sl-school">Escolaridade pública:</label>
-          <select name="public-schooling" id="sl-school">
-            <option value="C">Completo</option>
-            <option value="B">Ensino Básico</option>
-            <option value="F" selected>Ensino Fundamental</option>
-            <option value="M">Ensino Médio</option>
-            <option value="N">Nenhuma</option>
-          </select>
-        </div>
-      </div>
-      <div class="p-8 border border-slate-300 dark:border-slate-600">
-        <div class="field">
-          <label for="nat-box">Naturalidade:</label>
-          <span id="nat-box" class="flex items-center gap-1 ml-1">
+          <label for="nat-box">Naturalidade</label>
+          <span id="nat-box" class="flex items-center gap-2">
             <input
               type="text"
               name="natural-city"
@@ -126,25 +137,37 @@
             </select>
           </span>
         </div>
-        <div class="field">
-          <label for="txt-nation">Nacionalidade:</label>
-          <input
-            type="text"
-            name="nationality"
-            id="txt-nation"
-            value="{{ country }}"
-            required
-          />
+        <div class="flex gap-3">
+          <div class="field">
+            <label for="txt-nation">Nacionalidade</label>
+            <input
+              type="text"
+              name="nationality"
+              id="txt-nation"
+              value="{{ country }}"
+              required
+            />
+          </div>
+          <div class="field">
+            <label for="txt-origin">País de origem</label>
+            <input
+              type="text"
+              name="country-of-origin"
+              id="txt-origin"
+              value="{{ country }}"
+              required
+            />
+          </div>
         </div>
-        <div class="field">
-          <label for="txt-origin">País de origem:</label>
-          <input
-            type="text"
-            name="country-of-origin"
-            id="txt-origin"
-            value="{{ country }}"
-            required
-          />
+        <div class="flex gap-3 items-center my-3">
+          <label for="sl-school">Escolaridade pública:</label>
+          <select name="public-schooling" id="sl-school">
+            <option value="C">Completo</option>
+            <option value="B">Ensino Básico</option>
+            <option value="F" selected>Ensino Fundamental</option>
+            <option value="M">Ensino Médio</option>
+            <option value="N">Nenhuma</option>
+          </select>
         </div>
         <div class="field flex items-center">
           <label for="civil-box">Estado civíl:</label>
@@ -166,123 +189,148 @@
             <label for="rd-widow">Viúvo</label>
           </span>
         </div>
-      </div>
+      </article>
     </section>
 
-    <hr />
+    <section class="grid grid-cols-2 gap-4" x-show="tab === 'contato'">
+      <article>
+        <h2 class="text-2xl font-sans font-bold mb-2">Contato</h2>
 
-    <h2 class="text-2xl font-sans font-semibold">Filiação</h2>
-    <div class="field">
-      <label for="txt-guardian">Responsável:</label>
-      <input
-        type="text"
-        name="name-guardian"
-        id="txt-guardian"
-        size="30"
-        @keydown="validateName"
-        required
-      />
-      <label for="tel-guardian" class="ml-1">Telefone:</label>
-      <input
-        type="tel"
-        name="phone-guardian"
-        id="tel-guardian"
-        size="11"
-        x-mask="(99)99999-9999"
-        required
-      />
-      <label for="email-guardian">Email:</label>
-      <input
-        type="email"
-        name="email-guardian"
-        id="email-guardian"
-        maxlength="100"
-        size="30"
-        required
-      />
-    </div>
+        <div class="flex gap-3">
+          <div class="field grow">
+            <label for="txt-email">Email</label>
+            <input
+              type="email"
+              name="contact-email"
+              id="txt-email"
+              class="w-full"
+              required
+            />
+          </div>
+          <div class="field">
+            <label for="txt-phone">Celular</label>
+            <input
+              type="tel"
+              name="phone"
+              id="txt-phone"
+              x-mask="(99)99999-9999"
+              size="12"
+              required
+            />
+          </div>
+        </div>
+        <div class="flex gap-3 items-center my-3">
+          <label for="txt-cep">CEP:</label>
+          <input
+            type="number"
+            name="cep"
+            id="txt-cep"
+            size="11"
+            required
+            x-ref="cep"
+          />
+          <button
+            class="bg-sky-600 dark:bg-sky-700 py-2 px-3 rounded-md"
+            @click.prevent="() => fillCEP($refs.cep.value)"
+          >
+            Fill in
+          </button>
+        </div>
+        <div class="flex gap-3">
+          <div class="field grow">
+            <label for="txt-city">Cidade</label>
+            <input
+              type="text"
+              name="residence-city"
+              id="txt-city"
+              class="w-full"
+              x-model="city"
+              required
+            />
+          </div>
+          <div class="field grow">
+            <label for="txt-neighborhood">Bairro</label>
+            <input
+              type="text"
+              name="neighborhood"
+              id="txt-txt-neighborhood"
+              class="w-full"
+              x-model="neighborhood"
+              required
+            />
+          </div>
+        </div>
+        <div class="flex gap-3">
+          <div class="field">
+            <label for="txt-street">Rua</label>
+            <input type="text" name="street" id="txt-street" x-model="street" />
+          </div>
+          <div class="field">
+            <label for="txt-street-number">Número</label>
+            <input
+              type="number"
+              name="street-number"
+              id="txt-street-number"
+              size="4"
+              required
+            />
+          </div>
+          <div class="field">
+            <label for="txt-comp">Complemento:</label>
+            <input type="text" name="complement" id="txt-comp" size="10" />
+          </div>
+        </div>
+        <div class="field">
+          <label for="txt-distance">Distância:</label>
+          <input
+            type="number"
+            name="distance"
+            id="txt-distance"
+            size="4"
+            min="0"
+            max="100"
+            step="0.1"
+          />
+        </div>
+      </article>
+      <article>
+        <h2 class="text-2xl font-sans font-bold mb-2">Responsáveis</h2>
 
-    <hr />
-
-    <h2 class="text-2xl font-sans font-semibold">Contato</h2>
-    <div class="field">
-      <label for="txt-email">Email:</label>
-      <input
-        type="email"
-        name="contact-email"
-        id="txt-email"
-        size="28"
-        required
-      />
-      <label for="txt-phone">Celular:</label>
-      <input
-        type="tel"
-        name="phone"
-        id="txt-phone"
-        x-mask="(99)99999-9999"
-        size="10"
-        required
-      />
-    </div>
-    <div class="field">
-      <label for="txt-cep">CEP:</label>
-      <input
-        type="number"
-        name="cep"
-        id="txt-cep"
-        size="11"
-        required
-        x-ref="cep"
-      />
-      <button
-        class="bg-sky-600 dark:bg-sky-700 py-2 px-3 rounded"
-        @click.prevent="() => fillCEP($refs.cep.value)"
-      >
-        Fill in
-      </button>
-    </div>
-    <div class="field">
-      <label for="txt-city">Cidade:</label>
-      <input
-        type="text"
-        name="residence-city"
-        id="txt-city"
-        x-model="city"
-        required
-      />
-      <label for="txt-neighborhood">Bairro:</label>
-      <input
-        type="text"
-        name="neighborhood"
-        id="txt-txt-neighborhood"
-        x-model="neighborhood"
-        required
-      />
-    </div>
-    <div class="field">
-      <label for="txt-street">Rua:</label>
-      <input type="text" name="street" id="txt-street" x-model="street" />
-      <label for="txt-street-number">Número:</label>
-      <input
-        type="number"
-        name="street-number"
-        id="txt-street-number"
-        size="4"
-        required
-      />
-    </div>
-    <div class="field">
-      <label for="txt-comp">Complemento:</label>
-      <input type="text" name="complement" id="txt-comp" size="10" />
-      <label for="txt-distance">Distância:</label>
-      <input
-        type="number"
-        name="distance"
-        id="txt-distance"
-        size="5"
-        step="0.1"
-      />
-    </div>
+        <div class="field">
+          <label for="txt-guardian">Nome</label>
+          <input
+            type="text"
+            name="name-guardian"
+            id="txt-guardian"
+            size="30"
+            @keydown="validateName"
+            required
+          />
+        </div>
+        <div class="field">
+          <label for="tel-guardian" class="ml-1">Telefone</label>
+          <input
+            type="tel"
+            name="phone-guardian"
+            id="tel-guardian"
+            size="12"
+            x-mask="(99)99999-9999"
+            required
+          />
+        </div>
+        <div class="field">
+          <label for="email-guardian">Email</label>
+          <input
+            type="email"
+            name="email-guardian"
+            id="email-guardian"
+            maxlength="100"
+            size="30"
+            required
+          />
+        </div>
+      </article>
+    </section>
 
     <ul class="border border-red-500 p-2" x-show="errors.length > 0">
       <template x-for="err in errors">
