--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -5,32 +5,32 @@
 @tailwind utilities;
 
 @layer base {
-  [type='text'],
-  [type='email'],
-  [type='url'],
-  [type='password'],
-  [type='number'],
-  [type='date'],
-  [type='datetime-local'],
-  [type='month'],
-  [type='search'],
-  [type='tel'],
-  [type='time'],
-  [type='week'],
+  [type="text"],
+  [type="email"],
+  [type="url"],
+  [type="password"],
+  [type="number"],
+  [type="date"],
+  [type="datetime-local"],
+  [type="month"],
+  [type="search"],
+  [type="tel"],
+  [type="time"],
+  [type="week"],
   [multiple],
   textarea,
   select {
-    @apply shadow-sm rounded-xl transition-all border border-gray-400
-    dark:border-gray-500 focus-visible:outline-none focus:border-sky-600
-    hover:border-sky-600 dark:bg-slate-700;
+    @apply rounded-xl border border-gray-400 shadow-sm transition-all
+    hover:border-sky-600 focus:border-sky-600 focus-visible:outline-none
+    dark:border-gray-500 dark:bg-slate-700;
   }
 
-  [type='radio'] {
-    @apply ml-3 first:ml-0 mr-1 hover:bg-none hover:border-sky-600 checked:bg-cyan-600 hover:checked:bg-cyan-600;
+  [type="radio"] {
+    @apply ml-3 mr-1 first:ml-0 checked:bg-cyan-600 hover:border-sky-600 hover:bg-none hover:checked:bg-cyan-600;
   }
 
-  [type='submit'] {
-    @apply bg-amber-400 dark:bg-amber-500 dark:text-black rounded-3xl hover:shadow-md cursor-pointer;
+  [type="submit"] {
+    @apply cursor-pointer rounded-3xl bg-amber-400 hover:shadow-md dark:bg-amber-500 dark:text-black;
   }
 }
 
@@ -39,7 +39,7 @@ hr {
 }
 
 nav svg {
-  @apply w-6 h-6;
+  @apply h-6 w-6;
 }
 
 .field {
@@ -47,5 +47,9 @@ nav svg {
 }
 
 td {
-  @apply border border-slate-400 dark:border-slate-600 p-3;
+  @apply border border-slate-400 p-3 dark:border-slate-600;
+}
+
+.btn {
+  @apply rounded bg-cyan-700 px-3 py-2 text-slate-100 transition-all duration-300 hover:bg-cyan-800 hover:shadow-md;
 }
