--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,9 +9,12 @@
     {% block head %}{% endblock %}
     <script defer src="{% static 'core/dist/js/page.js' %}"></script>
   </head>
-  <body class="bg-slate-100 flex flex-col h-screen dark:bg-slate-800 dark:text-slate-200 relative">
+  <body class="bg-cyan-400 flex">
     {% include "core/messages.html" %}
-    {% include "core/navbar.html" with no_nav=no_nav %}
+    {% include "core/navbar.html"%}
+    <div class="">
+      <img class="pt-11 h-80 w-24" src="../../static/core/images/plantas.png">
+    </div>
     {% block content %}{% endblock %}
   </body>
 </html>
