Added import_user view

--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -73,7 +73,7 @@
           </button>
         </li>
       </ul>
-      <a href="import_users" class="btn flex items-center gap-2 font-semibold">
+      <a href="{% url 'import_users' %}" class="btn flex items-center gap-2 font-semibold">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
