--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -26,7 +26,7 @@
   }
 
   [type="radio"] {
-    @apply ml-3 mr-1 first:ml-0 checked:bg-cyan-600 hover:border-sky-600 hover:bg-none hover:checked:bg-cyan-600;
+    @apply ml-3 mr-1 bg-slate-800 first:ml-0 checked:bg-cyan-600 hover:border-sky-600 hover:bg-none hover:checked:bg-cyan-600;
   }
 
   [type="submit"] {
