--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,5 +1,5 @@
 {% if not no_nav|default:False %}
-<nav class="bg-black">
+<nav class="bg-slate-600">
   <div class="h-auto w-60 px-3 py-4 z-10">
     <header>
       <div>
